--- a/package.json
+++ b/package.json
@@ -27,9 +27,16 @@
     "@angular2-mdl-ext/select": "^0.10.3",
     "@swimlane/ngx-datatable": "^10.4.0",
     "core-js": "^2.4.1",
+    "jasmine-spec-reporter": "^3.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage-istanbul-reporter": "^0.2.3",
+    "karma-jasmine": "^1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "mydaterangepicker": "^4.1.11",
     "rxjs": "^5.5.2",
-    "typescript": "^2.7.0-dev.20171118",
+    "ts-node": "^2.0.0",
+    "tslint": "^4.5.1",
+    "typescript": "^2.6.0-dev.20171019",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
@@ -53,7 +60,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
-    "typescript": "~2.0.0"
+    "tslint": "~5.8.0",
+    "typescript": "~2.7.0-dev.20171121"
   }
 }
