--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "mydaterangepicker": "^4.1.11",
+    "ngx-clipboard": "^8.1.1",
     "rxjs": "^5.5.2",
     "ts-node": "^2.0.0",
     "tslint": "^4.5.1",
